pkg/main/default/objects/RecipientStatus__c/RecipientStatus__c.object-meta.xml
<CustomObject>
    <description>DocuSign Recipient Status</description>
    <label>DocuSign Recipient Status</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Recipient Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>