pkg/main/default/objects/RecipientStatus__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <label>Completed</label>
    <type>DateTime</type>
</CustomField>