pkg/main/default/objects/RecipientStatus__c/fields/EnvelopeStatus__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeStatus__c</fullName>
    <label>DocuSign Envelope Status</label>
    <referenceTo>EnvelopeStatus__c</referenceTo>
    <relationshipLabel>DocuSign Recipient Statuses</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>