pkg/main/default/objects/RecipientStatus__c/fields/LastStatusUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastStatusUpdate__c</fullName>
    <label>Last Status Update</label>
    <type>DateTime</type>
</CustomField>