pkg/main/default/objects/RecipientStatus__c/fields/RoutingOrder__c.field-meta.xml
<CustomField>
    <fullName>RoutingOrder__c</fullName>
    <label>Routing Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>