pkg/main/default/objects/RecipientStatus__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <label>Salesforce Source ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>